compiler/cpp/parse_tree.h

    typedef struct _ParseTreeNode* ParseTreeNodePtr;
    typedef struct
    {
        size_t _beginLine;
        size_t _beginColumn;
        size_t _endLine;
        size_t _endColumn;
        size_t _fileIndex;
        bool _valid;
    } Location;
    typedef enum _ParseTreeBinaryOpType
    {
        ParseTreeBinaryOpTypeAdd,
        ParseTreeBinaryOpTypeSub,
        ParseTreeBinaryOpTypeMul,
        ParseTreeBinaryOpTypeLutMul,
        ParseTreeBinaryOpTypeDiv,
        ParseTreeBinaryOpTypeMod,
        ParseTreeBinaryOpTypeAnd,
        ParseTreeBinaryOpTypeLogicalAnd,
        ParseTreeBinaryOpTypeOr,
        ParseTreeBinaryOpTypeLogicalOr,
        ParseTreeBinaryOpTypeXor,
        ParseTreeBinaryOpTypeLogicalXor,
        ParseTreeBinaryOpTypeShl,
        ParseTreeBinaryOpTypeShr,
        ParseTreeBinaryOpTypeEQ,
        ParseTreeBinaryOpTypeNE,
        ParseTreeBinaryOpTypeGT,
        ParseTreeBinaryOpTypeGE,
        ParseTreeBinaryOpTypeLT,
        ParseTreeBinaryOpTypeLE,
    } ParseTreeBinaryOpType;
    typedef enum _ParseTreeUnaryOpType
    {
        ParseTreeUnaryOpTypeInvert,
        ParseTreeUnaryOpTypeNegate,
        ParseTreeUnaryOpTypeLogicalInvert
    } ParseTreeUnaryOpType;
    typedef enum _ParseTreeSizeofType
    {
        ParseTreeSizeofTypeBit,
        ParseTreeSizeofTypeByte,
    } ParseTreeSizeofType;
    typedef enum _ParseTreeFunctionModifier
    {
        ParseTreeFunctionModifierNone = 0,
        ParseTreeFunctionModifierInline = (1 << 0),
        ParseTreeFunctionModifierAsync = (1 << 1),
        ParseTreeFunctionModifierExport = (1 << 2), // TODO: FOSS - Remove after this has been removed from front-end (PR 39888)
        ParseTreeFunctionModifierPipelined = (1 << 3),
        ParseTreeFunctionModifierIntrinsic = (1 << 4),
        ParseTreeFunctionModifierUnordered = (1 << 5),
        ParseTreeFunctionModifierExternal = (1 << 6),
        ParseTreeFunctionModifierExternalFixedLatency = (1 << 7),
        ParseTreeFunctionModifierNoBackPressure = (1 << 8),
        ParseTreeFunctionModifierReorderByLooping = (1 << 9),
        ParseTreeFunctionModifierNoInline = (1 << 10),
        ParseTreeFunctionModifierExternalExternallyInstantiated = (1 << 11),
        ParseTreeFunctionModifierReset = (1 << 13),

        // Interface method or callback as part of an export class
        // This is set both when an export class is used, and when it is defined
        ParseTreeFunctionModifierExportClassInterface = (1 << 14),

        ParseTreeFunctionModifierPure = (1 << 15)
    } ParseTreeFunctionModifier;
    typedef enum _ParseTreeMemberProtectionModifier
    {
        ParseTreeMemberProtectionModifierPublic,
        ParseTreeMemberProtectionModifierPrivate
    } ParseTreeMemberProtectionModifier;
    typedef enum _ParseTreeFormatSpecifier
    {
        ParseTreeFormatSpecifierBin,
        ParseTreeFormatSpecifierOct,
        ParseTreeFormatSpecifierDec,
        ParseTreeFormatSpecifierHex,
        ParseTreeFormatSpecifierHexUpper,
        ParseTreeFormatSpecifierNone
    } ParseTreeFormatSpecifier;
    typedef const char* const* ParseNamespaceScopePtr;
    typedef const char* const* ParseQualifiedNamePtr;
    API ParseTreeNodePtr ParseDeclare(ParseTreeNodePtr, ParseTreeNodePtr, ParseTreeNodePtr, ParseTreeNodePtr,
                                      unsigned int flags, ParseNamespaceScopePtr);
    API ParseTreeNodePtr ParseFunctionParam(ParseTreeNodePtr, ParseTreeNodePtr, ParseTreeNodePtr,
                                            ParseNamespaceScopePtr);
    API ParseTreeNodePtr ParseFlagAttribute(unsigned int attr);
    API ParseTreeNodePtr ParseIntAttribute(unsigned int attr, ParseTreeNodePtr);
    API ParseTreeNodePtr ParseAssign(ParseTreeNodePtr, ParseTreeNodePtr);
    API ParseTreeNodePtr ParseIf(ParseTreeNodePtr, ParseTreeNodePtr, ParseTreeNodePtr);
    API ParseTreeNodePtr ParseDoWhile(ParseTreeNodePtr, ParseTreeNodePtr, ParseTreeNodePtr);
    API ParseTreeNodePtr ParseUnrolledFor(ParseTreeNodePtr, ParseTreeNodePtr, ParseTreeNodePtr);
    API ParseTreeNodePtr ParseRangeFor(ParseTreeNodePtr, ParseTreeNodePtr, ParseTreeNodePtr, ParseTreeNodePtr);
    API ParseTreeNodePtr ParseAnnotatedStatement(ParseTreeNodePtr, ParseTreeNodePtr);
    API ParseTreeNodePtr ParseMux(ParseTreeNodePtr, ParseTreeNodePtr);
    API ParseTreeNodePtr ParseBinaryOp(ParseTreeBinaryOpType, ParseTreeNodePtr, ParseTreeNodePtr);
    API ParseTreeNodePtr ParseUnaryOp(ParseTreeUnaryOpType, ParseTreeNodePtr);
    API ParseTreeNodePtr ParseSizeOf(ParseTreeSizeofType, ParseTreeNodePtr);
    API ParseTreeNodePtr ParseCast(ParseTreeNodePtr, ParseTreeNodePtr);
    API ParseTreeNodePtr ParseFunctionSpecifier(ParseTreeNodePtr object, ParseTreeNodePtr name);
    API ParseTreeNodePtr ParseFunctionCall(ParseTreeNodePtr, ParseTreeNodePtr, ParseTreeNodePtr);
    API ParseTreeNodePtr ParseBaseList(ParseTreeNodePtr);
    API ParseTreeNodePtr ParseAppendList(ParseTreeNodePtr, ParseTreeNodePtr);
    API ParseTreeNodePtr ParseArrayType(ParseTreeNodePtr, ParseTreeNodePtr, ParseTreeNodePtr);
    API ParseTreeNodePtr ParseFunctionModifier(ParseTreeFunctionModifier);
    API ParseTreeNodePtr ParseFunctionTypeParam(ParseTreeNodePtr, ParseTreeNodePtr, ParseTreeNodePtr);
    API ParseTreeNodePtr ParseFunctionType(ParseTreeNodePtr, ParseTreeNodePtr, ParseTreeNodePtr);
    API ParseTreeNodePtr ParseFunction(ParseTreeNodePtr, ParseTreeNodePtr, ParseTreeNodePtr, ParseTreeNodePtr,
                                       ParseTreeNodePtr, ParseTreeNodePtr, const char*);
    API ParseTreeNodePtr ParseReturn();
    API ParseTreeNodePtr ParseReturnExpression(ParseTreeNodePtr);
    API ParseTreeNodePtr ParseNestedScope(ParseTreeNodePtr);
    API ParseTreeNodePtr ParseStruct(ParseTreeNodePtr, ParseTreeNodePtr, ParseNamespaceScopePtr, const char*);
    API ParseTreeNodePtr ParseUnion(ParseTreeNodePtr, ParseTreeNodePtr, ParseNamespaceScopePtr, const char*);
    API ParseTreeNodePtr ParseNamedType(ParseTreeNodePtr, ParseNamespaceScopePtr);
    API ParseTreeNodePtr ParseNamedVariable(ParseTreeNodePtr);
    API ParseTreeNodePtr ParseAccessArray(ParseTreeNodePtr, ParseTreeNodePtr);
    API ParseTreeNodePtr ParseAccessArrayLValue(ParseTreeNodePtr, ParseTreeNodePtr);
    API ParseTreeNodePtr ParseAccessMember(ParseTreeNodePtr, ParseTreeNodePtr);
    API ParseTreeNodePtr ParseMemberModifier(ParseTreeMemberProtectionModifier);
    API ParseTreeNodePtr ParseClass(ParseTreeNodePtr, ParseTreeNodePtr, ParseTreeNodePtr, ParseNamespaceScopePtr,
                                    const char*);
    API ParseTreeNodePtr ParseDesignator(ParseTreeNodePtr, ParseTreeNodePtr);
    API ParseTreeNodePtr ParseInitializerList(ParseTreeNodePtr);
    API ParseTreeNodePtr ParseSwitch(ParseTreeNodePtr, ParseTreeNodePtr);
    API ParseTreeNodePtr ParseSwitchBlock(ParseTreeNodePtr, ParseTreeNodePtr);
    API ParseTreeNodePtr ParseExternalFunction(ParseTreeNodePtr, ParseTreeNodePtr, ParseTreeNodePtr, ParseTreeNodePtr);
    API ParseTreeNodePtr ParseConst(ParseTreeNodePtr);
    API ParseTreeNodePtr ParseStatic(ParseTreeNodePtr);
    API ParseTreeNodePtr ParseFanOut(ParseTreeNodePtr, ParseTreeNodePtr);
    API ParseTreeNodePtr ParseBarrier();
    API ParseTreeNodePtr ParseConcat(ParseTreeNodePtr);
    API ParseTreeNodePtr ParseReorder(ParseTreeNodePtr);
    API ParseTreeNodePtr ParseAttribute(unsigned int attr, ParseTreeNodePtr);
    API ParseTreeNodePtr ParseTypedef(ParseTreeNodePtr, ParseTreeNodePtr, ParseNamespaceScopePtr, const char*);
    API ParseTreeNodePtr ParseStaticAssert(ParseTreeNodePtr);
    API ParseTreeNodePtr ParseExportType(ParseTreeNodePtr, ParseTreeNodePtr);
    API ParseTreeNodePtr ParseExtern(ParseTreeNodePtr, ParseTreeNodePtr);
    API ParseTreeNodePtr ParseStringType();
    API ParseTreeNodePtr ParseStringLiteral(const char*);
    API ParseTreeNodePtr ParseInterpolatedString(ParseTreeNodePtr);
    API ParseTreeNodePtr ParseInterpolatedStringSegment(ParseTreeNodePtr, ParseTreeNodePtr);
    API ParseTreeNodePtr ParseInterpolationExpression(ParseTreeNodePtr, ParseTreeNodePtr, ParseTreeFormatSpecifier,
                                                      unsigned int);
    API ParseTreeNodePtr ParseVoidType();
    API ParseTreeNodePtr ParseBoolType();
    API ParseTreeNodePtr ParseBoolLiteral(BOOL);
    API ParseTreeNodePtr ParseFloatType();
    API ParseTreeNodePtr ParseFloatLiteral(float);
    API ParseTreeNodePtr ParseIntType(int);
    API ParseTreeNodePtr ParseDecimalLiteral(const char*);
    API ParseTreeNodePtr ParseUintType(int);
    API ParseTreeNodePtr ParseIdentifier(const char*);
    API ParseTreeNodePtr ParseNamespace(ParseTreeNodePtr, ParseTreeNodePtr);
    API ParseTreeNodePtr ParseScopedIdentifier(ParseTreeNodePtr);
    API ParseTreeNodePtr ParseEnum(ParseTreeNodePtr, ParseTreeNodePtr, ParseTreeNodePtr, ParseNamespaceScopePtr);
    API ParseTreeNodePtr ParseEnumConstant(ParseTreeNodePtr, ParseTreeNodePtr, ParseNamespaceScopePtr);
    API ParseTreeNodePtr ParseEnumValue(ParseTreeNodePtr, ParseTreeNodePtr);
    API ParseTreeNodePtr ParseReference(ParseTreeNodePtr);
    API ParseTreeNodePtr ParseThis(ParseNamespaceScopePtr);
    API ParseTreeNodePtr ParseQualifiedName(ParseQualifiedNamePtr name);
    API ParseTreeNodePtr ParseTemplateArg(const char* name, ParseTreeNodePtr arg);
    API ParseTreeNodePtr ParseTemplateInstance(ParseTreeNodePtr templateName, ParseTreeNodePtr templateArguments);
    API ParseTreeNodePtr ParseDefaultInitialization(ParseTreeNodePtr init);
    API void SetNodeType(ParseTreeNodePtr, ParseTreeNodePtr);
    API void SetLocation2(const Location*);
    API void UnknownLocation();
    API BOOL InitCompiler(const Options*);
    API BOOL Codegen(const char* target, const char* output, const char* res, const char* dmgl,
                     const char* dmglDetailed, ParseTreeNodePtr root);
enum class BaseType
{
    Int,
    Uint
};
enum class KnownValueType
{
    None,
    Int,
    String
};
typedef std::function<void(const Type* const)> TypeVisitFunction;
// When ParseTreeNode::Visit calls a VisitFunction, it passes another callback
// which should be called to continue the traversal down the tree
typedef std::function<void(void)> VisitChildrenFunction;
typedef std::function<void(const ParseTreeNode* const, const VisitChildrenFunction&)> VisitFunction;
typedef std::function<void(IRContext& context, const AllocatedRegister* const reg)> StoreCallback;